--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -10,7 +10,7 @@
     {% if latest_question_list %}
         <ul>
             {% for question in latest_question_list %}
-                <li><a href="">{{ question.content }}</a></li>
+                <li><a href="{% url 'polls:detail' question.id %}">{{ question.content }}</a></li>
             {% endfor %}
         </ul>
     {% else %}
